Version 1.73 (?? July 01)
- print_cells and read_cells small cleanup.

Version 1.72 (10 July 01)
- New functions : TDS.create_vertex() and TDS.delete_vertex().

Version 1.71 (6 July 01)
- minor corrections in the user manual suggested by Susan and Andreas
in Dagtuhl
- VC++ needs some macros for Filtered_exact<>, added in examples and demos
- std::ostream & operator<< of T3 and copy_tds of TDS_3
modified to respect the order in which vertices were created

Version 1.70 (3  July 01)
- Use Filtered_exact<MP_Float> in the demo/examples.

Version 1.69 (3  July 01)
- fix in read_cells
- cell constructions and deletions done by the TDS only + doc update.
- Add a init() method to the cell base.

Version 1.68 (29 June 01)
- read_cells and print_cells member functions of tds for gcc-2.96 
- include updated for Filtered_exact

Version 1.67 (25 June 01)
- bug in demo and example _color fixed
- dual functions cleaned
- useless blind_demo removed
- cleanup

Version 1.66 (21 June 01)
- dual function for cells and facets
- demo.voronoi
- example and demo with modified vertex base
- new remove documented

Version 1.65 (20 June 01)
- Simplify TDS test program to use an empty traits.

Version 1.64 (20 June 01)
- new demo for vertex removal
- new example for hierarchy
- doc fixes for tds (new signature for insert methods)

Version 1.63 (20 June 01)
- doc for hierarchy fixed
- cleanup in examples, demo

Version 1.62 (19 June 01)
- Nothing changed.  Package renamed to Triangulation_3.

Version 1.61 (19 June 01)
- all concepts renamed in the doc according to the decision made in Dagtuhl
- default template parameters for all triangulation classes except hierarchy
  default used in the example and test-suite
- kernel traits used in the example(s) and test-suite
- example files included directly in the doc
- Remove one "new Cell" in Triangulation_3.
- Privatize some member functions of TDS.

Version 1.60 (14 June 01)
- Short names for the hierarchy.
- More test-suite cleanups.
