@@ -12,8 +12,8 @@
 #include <CGAL/Triangulation_data_structure_3.h>
 #include <CGAL/Delaunay_triangulation_3.h>
 #include <CGAL/Triangulation_hierarchy_3.h>
-#include <CGAL/Filtered_exact.h>
 #include <CGAL/MP_Float.h>
+#include <CGAL/Filtered_exact.h>
 
 #include <cassert>
 #include <vector>
