@@ -10,8 +10,8 @@
 #endif
 
 #include <CGAL/Triangulation_3.h>
-#include <CGAL/Filtered_exact.h>
 #include <CGAL/MP_Float.h>
+#include <CGAL/Filtered_exact.h>
 
 #include <iostream>
 #include <fstream>
