@@ -1,5 +1,6 @@
 Version 1.73 (?? July 01)
 - print_cells and read_cells small cleanup.
+- With VC++, MP_Float.h must be included before Filtered_exact.h.
 
 Version 1.72 (10 July 01)
 - New functions : TDS.create_vertex() and TDS.delete_vertex().
